# codex-colab-remote

./: .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.py  install.sh
.codex-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: bootstrap_colab.py.tmpl
docs/: architecture.md  configuration.md  development.md  installation.md  roadmap.md  tools.md  troubleshooting.md
plugins/colab-remote/: .mcp.json  config_schema.json  pyproject.toml
plugins/colab-remote/.codex-plugin/: plugin.json
plugins/colab-remote/assets/: bootstrap_ssh.py.tmpl
plugins/colab-remote/colab_remote/: __init__.py  cli.py  configuration.py  secret_broker.py
plugins/colab-remote/mcp/: config_io.py  drive_ops.py  managed_transfer.py  notebook_ops.py  process_utils.py  secret_broker.py  server.py
plugins/colab-remote/scripts/: colab.ps1  colab_compat.py  drive_auth_probe.py  drive_mount_worker.py  run_mcp.ps1  validate_repo.py
plugins/colab-remote/skills/operate-colab-remote/: SKILL.md
plugins/colab-remote/skills/operate-colab-remote/agents/: openai.yaml
plugins/colab-remote/skills/operate-colab-remote/references/: policy-and-runtime.md  recovery.md
plugins/colab-remote/tests/: test_config_io.py  test_configuration.py  test_drive_mount_worker.py  test_drive_ops.py  test_process_utils.py  test_protocol.py  test_repository.py  test_secret_broker.py  test_server.py  test_user_cli.py
scripts/: colab.ps1  run_mcp.ps1  runtime.ps1  start_colab_auth.sh  validate_repo.py  (+1 more)
(+30 files in other folders)
